catalog/static/css/styles.css
/* so header image has max width*/
.container-header-image, #container-header-title {
    /*max-width: 1400px;*/
    /*margin: 0 auto;*/
}

.header-icons{
    margin-bottom: 5px;
}

/* so navbar has max width*/
.container-fluid {
    max-width: 1400px;
}

.img-fluid {
    /*margin: 0 auto;*/
}

.bg-company-red {
    background-color: black;
}

/* so adding/removing trips adds/removes also <hr> after each trip */
.crispy-form {
    margin-bottom: 50px;
    border-bottom: 1px solid black;
}

.add-row {
    margin-top: -45px;
}

.form-group {
    /*padding-top: 0.5rem;*/
    padding-bottom: 1rem;
}

.invalid-feedback {
    margin-bottom: -0.25rem;
}

/* park images start */
/*so park image has max width*/
.container-offer-image-start {
    max-width: 50%;
    margin-right: 1rem;
    margin-bottom: 0.3rem;
    margin-top: 0.275rem;
}

/* so park image has max width*/
.container-offer-image-end {
    max-width: 50%;
    margin-left: 1rem;
    margin-bottom: 0.3rem;
    margin-top: 0.275rem;
}

/* different rules for small screens */
@media (max-width: 767px) {
    .container-offer-image-start {
        width: 100%;
        max-width: 100%;
        margin-bottom:  1.25rem;
    }

    .container-offer-image-end {
        width: 100%;
        max-width: 100%;
        margin-bottom:  1.25rem;
    }
}

/* different rules for big screens */
@media (min-width: 1200px) {
    .container-offer-image-start {
         width: 65%;
         max-width: 65%;
    }

    .container-offer-image-end {
         width: 65%;
         max-width: 65%;
    }
}

/* rounded corners */
.container-offer-image-start #park-img {
    /*border-top-left-radius: 45px;*/
    border-top-right-radius: 45px;
    border-bottom-left-radius: 45px;
    border-bottom-right-radius: 45px;
}

.container-offer-image-end #park-img {
    border-top-left-radius: 45px;
    /*border-top-right-radius: 45px;*/
    border-bottom-left-radius: 45px;
    border-bottom-right-radius: 45px;
}
/* park images end */

/* so footer is fixed at the bottom of a page */
#page-container {
  position: relative;
  min-height: 100vh;
}

#content-wrap {
  padding-bottom: 4.5rem;    /* Footer height */
}

#footer {
  position: absolute;
  bottom: 0;
  width: 100%;
}
/* footer end */

.container-header-logo {
    max-width: 130px;
    margin: 0 auto;
}

a[href^="mailto:"], a[href^="tel:"] {
  /*font-family: sans-serif;*/
  color: black;
  /*font-size: 11px;*/
}


/* Feedbacks Start*/
#feedback {
    background-color: #fcfbfb;
}

#feedback-profile-area {
    display:flex;
    align-items:flex-start;
    flex-direction: row;
}

#feedback-header-middle {
    flex: 1;
}

#header-flex-container {
    display:flex;
    align-items:flex-start;
    flex-direction: row;
}

#header-flex-container > a {
    text-decoration: none;
    color: black;
}

#feedback-header-img {
    min-width: 4.5rem;
    max-width: 4.5rem;
}

#feedback-profile-area > span {
    padding-left: 0.5rem;
}

#feedback-buttons {
    margin-left: auto;
}

#feedback-buttons > a, #my-expeditions-buttons > a {
    text-decoration: none;
}

#feedback-buttons > a > img {
    margin-left: .75rem;
    margin-bottom: .3rem;
    margin-top: -.3rem;
}
/* Feedbacks END */

/* Profile Start*/
.profile-links {
    text-decoration: none;
    padding-left: 0.5rem;
}
/* Profile END*/

/* So jumping to a specific part of a page considers a sticky navbar */
.jump-href:before {
  display: block;
  height: 66px;   /* equal to the header height */
  margin-top: -66px;  /* negative margin equal to the header height */
  visibility: hidden;
  content: "";
}

/* My expeditions START */
#my-expeditions-buttons {
    float: right;
    margin-left: 1.5rem;
}

#my-expeditions-buttons > a > img {
    margin-left: .3rem;
    margin-bottom: .1rem;
}

.list-group-item {
    background: #fcfbfb;
}

#my-parks {
    background: azure;
}

#my-rest {
    background: aliceblue;
}
/* My expeditions END */

/* About us START */
#contacts > p > b > a {
    text-decoration: none;
}
/* About us END */

.pagination {
    margin-bottom: 0;
}

#hint_id_hidden_email::before, #hint_id_hidden_phone::before {
    content: "\A";
    white-space: pre;
}

